# random_user_agent

./: README.md  pyproject.toml
src/random_user_agent/: __init__.py  api.py
tests/: api_test.py
